# top-banana

./: LICENSE  README.md  template.env
bindings-gamemaker/: bindings-gamemaker.yyp
bindings-gamemaker/objects/ctrl_TopBanana/: Create_0.gml  Other_62.gml  ctrl_TopBanana.yy
bindings-gamemaker/objects/obj_Test/: Alarm_0.gml  Other_2.gml  obj_Test.yy
bindings-gamemaker/options/main/: options_main.yy
bindings-gamemaker/rooms/Room1/: Room1.yy
bindings-gamemaker/scripts/scr_TopBanana/: scr_TopBanana.gml  scr_TopBanana.yy
bindings-godot/: icon.svg.import  project.godot  top_banana_client.gd  top_banana_client_test.tscn
bindings-godot/addons/topbanana/: highscore_entry.gd  plugin.cfg  topbanana_client.gd  topbanana_plugin.gd
topbanana-backend/: Cargo.toml  Rocket.toml  diesel.toml
topbanana-backend/migrations/2025-03-05-164151_create_initial_tables/: down.sql  up.sql
topbanana-backend/migrations/2025-03-09-230822_create_historical_requests_table/: down.sql  up.sql
topbanana-backend/migrations/2025-03-10-001147_add_security_level_to_games/: down.sql  up.sql
topbanana-backend/migrations/2026-02-15-181011_add_unique_entries_setting_to_table/: down.sql  up.sql
topbanana-backend/src/: args.rs  lib.rs  main.rs  setup.rs
topbanana-backend/src/db/: models.rs  schema.rs
topbanana-backend/src/server/: admin.rs  api.rs  auth.rs  cors.rs  data_access.rs  db.rs  error.rs  highscore_tables.rs  mod.rs  openapi.rs
topbanana-backend/src/server/auth/: header.rs  jwt.rs  mod.rs
topbanana-backend/src/server/error/: messages.rs  mod.rs
topbanana-backend/src/server/requests/: hasher.rs  mod.rs
topbanana-backend/src/util/: header.rs  mod.rs
topbanana-backend/static/: index.html
