[package]
name = "topbanana"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bitflags = { version = "2.9.0", features = ["serde"] }
chrono = "0.4.40"
diesel = { version = "2.1.6", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
fern = "0.7.1"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
