[package]
name = "topbanana"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bitflags = { version = "2.9.0", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.1.6", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
digest = "0.10.7"
fern = "0.7.1"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["diesel_postgres"] }
scoped-futures = "0.1.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "2.0.12"
utoipa = { version = "5.3.1", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["rocket", "debug-embed"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
